--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -2,80 +2,125 @@
 setupdir = ..
 distribute = False
 envlist =
-    py26-1.4.x,
-    py26-1.5.x,
-    py26-1.6.x,
-    py27-1.4.x,
-    py27-1.5.x,
-    py27-1.6.x,
-    py27-1.7.x,
-    py33-1.5.x,
-    py33-1.6.x,
-    py33-1.7.x,
+    py26-1.4-1.7,
+    py26-1.5-1.7,
+    py26-1.6-1.7,
+    py26-1.4-1.8,
+    py26-1.5-1.8,
+    py26-1.6-1.8,
+    py27-1.4-1.7,
+    py27-1.5-1.7,
+    py27-1.6-1.7,
+    py27-1.4-1.8,
+    py27-1.5-1.8,
+    py27-1.6-1.8,
+    py27-1.7-1.8,
+    py33-1.5-1.8,
+    py33-1.6-1.8,
+    py33-1.7-1.8,
 
 [testenv]
-downloadcache = {toxworkdir}/_download/
 commands =
     {envpython} manage.py test {posargs:testapp} --settings=testapp.settings
 setenv =
     PYTHONPATH = .:{toxworkdir}/../..
     FEINCMS_RUN_TESTS = 1
 
-[testenv:py26-1.4.x]
+
+[testenv:py26-1.4-1.7]
+basepython = python2.6
+deps =
+    django==1.4.7
+    FeinCMS==1.7.7
+
+[testenv:py26-1.5-1.7]
+basepython = python2.6
+deps =
+    django==1.5.3
+    FeinCMS==1.7.7
+
+[testenv:py26-1.6-1.7]
+basepython = python2.6
+deps =
+    Django==1.6.0
+    FeinCMS==1.7.7
+
+
+[testenv:py26-1.4-1.8]
 basepython = python2.6
 deps =
     django==1.4.7
     FeinCMS==1.8.4
 
-[testenv:py27-1.4.x]
+[testenv:py26-1.5-1.8]
+basepython = python2.6
+deps =
+    django==1.5.3
+    FeinCMS==1.8.4
+
+[testenv:py26-1.6-1.8]
+basepython = python2.6
+deps =
+    Django==1.6.0
+    FeinCMS==1.8.4
+
+
+[testenv:py27-1.4-1.7]
+basepython = python2.7
+deps =
+    django==1.4.7
+    FeinCMS==1.7.7
+
+[testenv:py27-1.5-1.7]
+basepython = python2.7
+deps =
+    django==1.5.3
+    FeinCMS==1.7.7
+
+[testenv:py27-1.6-1.7]
+basepython = python2.7
+deps =
+    Django==1.6.0
+    FeinCMS==1.7.7
+
+
+[testenv:py27-1.4-1.8]
 basepython = python2.7
 deps =
     django==1.4.7
     FeinCMS==1.8.4
 
-[testenv:py26-1.5.x]
-basepython = python2.6
-deps =
-    django==1.5.3
-    FeinCMS==1.8.4
-
-[testenv:py27-1.5.x]
+[testenv:py27-1.5-1.8]
 basepython = python2.7
 deps =
     django==1.5.3
     FeinCMS==1.8.4
 
-[testenv:py26-1.6.x]
-basepython = python2.6
-deps =
-    Django==1.6.0
-    FeinCMS==1.8.4
-
-[testenv:py27-1.6.x]
+[testenv:py27-1.6-1.8]
 basepython = python2.7
 deps =
     Django==1.6.0
     FeinCMS==1.8.4
 
-[testenv:py27-1.7.x]
+[testenv:py27-1.7-1.8]
 basepython = python2.7
 deps =
     --editable=git+git://github.com/django/django.git@master#egg=django-dev
     FeinCMS==1.8.4
 
-[testenv:py33-1.5.x]
+[testenv:py33-1.5-1.8]
 basepython = python3.3
 deps =
     Django==1.5.4
     FeinCMS==1.8.4
 
-[testenv:py33-1.6.x]
+[testenv:py33-1.6-1.8]
 basepython = python3.3
 deps =
     Django==1.6.0
     FeinCMS==1.8.4
 
-[testenv:py33-1.7.x]
+[testenv:py33-1.7-1.8]
 basepython = python3.3
 deps =
     --editable=git+git://github.com/django/django.git@master#egg=django-dev
