tox.ini: Explicitly add the mptt dependency, FeinCMS 1.7.x did not install deps automatically

--- a/tests/tox.ini
+++ b/tests/tox.ini
@@ -32,18 +32,21 @@ basepython = python2.6
 deps =
     django==1.4.7
     FeinCMS==1.7.7
+    django-mptt==0.6.0
 
 [testenv:py26-1.5-1.7]
 basepython = python2.6
 deps =
     django==1.5.3
     FeinCMS==1.7.7
+    django-mptt==0.6.0
 
 [testenv:py26-1.6-1.7]
 basepython = python2.6
 deps =
     Django==1.6.0
     FeinCMS==1.7.7
+    django-mptt==0.6.0
 
 
 [testenv:py26-1.4-1.8]
@@ -70,18 +73,21 @@ basepython = python2.7
 deps =
     django==1.4.7
     FeinCMS==1.7.7
+    django-mptt==0.6.0
 
 [testenv:py27-1.5-1.7]
 basepython = python2.7
 deps =
     django==1.5.3
     FeinCMS==1.7.7
+    django-mptt==0.6.0
 
 [testenv:py27-1.6-1.7]
 basepython = python2.7
 deps =
     Django==1.6.0
     FeinCMS==1.7.7
+    django-mptt==0.6.0
 
 
 [testenv:py27-1.4-1.8]
