--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,13 @@
 language: python
+sudo: false
 python:
-  - "3.3"
+  - "3.4"
   - "2.7"
-  - "2.6"
 env:
-  - DJANGO=1.4.10 FEINCMS=1.8.0
-  - DJANGO=1.5.5 FEINCMS=1.8.0
-  - DJANGO=1.6 FEINCMS=1.8.0
-  - DJANGO=1.4.10 FEINCMS=1.9.0
-  - DJANGO=1.5.5 FEINCMS=1.9.0
-  - DJANGO=1.6 FEINCMS=1.9.0
-  - DJANGO=1.7 FEINCMS=1.10.1
-matrix:
-  exclude:
-    - python: "3.3"
-      env: DJANGO=1.4.10 FEINCMS=1.8.0
-    - python: "3.3"
-      env: DJANGO=1.4.10 FEINCMS=1.9.0
-    - python: "2.6"
-      env: DJANGO=1.7 FEINCMS=1.10.1
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
+  - REQ='Django>=1.8,<1.9 FeinCMS>=1.10,<1.11'
+  - REQ='Django>=1.9,<1.10 FeinCMS>=1.10,<1.11'
 install:
-  - pip install -q Django==$DJANGO FeinCMS==$FEINCMS django-mptt==0.6.0 --use-mirrors
+  - pip install -q $REQ django-mptt==0.8.0
   - python setup.py -q install
 # command to run tests, e.g. python setup.py test
 script: "cd tests && ./manage.py test testapp"
