--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "2.7"
 env:
   - REQ='Django>=1.8,<1.9 FeinCMS>=1.10,<1.11'
-  - REQ='Django>=1.9,<1.10 FeinCMS>=1.10,<1.11'
+  - REQ='Django>=1.9,<1.10 FeinCMS==2.0a11'
 install:
   - pip install -q $REQ django-mptt==0.8.0
   - python setup.py -q install
