--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ python:
 env:
   - REQ='Django>=1.8,<1.9 FeinCMS>=1.11,<1.12'
   - REQ='Django>=1.9,<1.10 FeinCMS>=1.12'
+  - REQ='Django>=1.10,<1.11 FeinCMS>=1.12'
 install:
   - pip install -U pip wheel
-  - pip install -q $REQ django-mptt==0.8.5
+  - pip install $REQ django-mptt
   - python setup.py install
 # command to run tests, e.g. python setup.py test
 script: "cd tests && ./manage.py test testapp"
