Add configuration for building docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include LICENSE
 include MANIFEST.in
 include README.rst
+include CHANGELOG.rst
 recursive-include form_designer/static *
 recursive-include form_designer/locale *
 recursive-include form_designer/templates *
