--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,17 @@
 [flake8]
-exclude=venv,migrations,docs
+exclude=venv,build,docs,.tox,migrations
+ignore=E203,W503
+max-complexity=10
+max-line-length=88
 
 [bdist_wheel]
 universal = 1
+
+[coverage:run]
+branch = True
+include =
+    *form_designer*
+omit =
+    *migrations*
+    *tests*
+    *.tox*
