Bundle the FeinCMS page migrations so that tables are created in the correct order

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude=venv,build,docs,.tox,migrations
+exclude=venv,build,docs,.tox,migrations,migrate
 ignore=E203,W503
 max-complexity=10
 max-line-length=88
