Replace the CSV export with an XLSX export

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,6 @@ matrix:
     - env: REQ="https://github.com/django/django/archive/master.zip#egg=Django"
 install:
   - pip install -U pip wheel
-  - pip install $REQ FeinCMS django-admin-ordering django-mptt Pillow
+  - pip install $REQ Pillow FeinCMS django-admin-ordering django-mptt xlsxdocument
   - python setup.py install
 script: cd tests && ./manage.py test -v2 testapp
