--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ deps =
     FeinCMS
     django-admin-ordering
     django-mptt
+    xlsxdocument
     coverage
 changedir = {toxinidir}
 skip_install = true
