Show deprecation warnings during the test suite running

--- a/tox.ini
+++ b/tox.ini
@@ -31,5 +31,5 @@ deps =
 changedir = {toxinidir}
 skip_install = true
 commands =
-    coverage run tests/manage.py test -v 2 {posargs:testapp}
+    python -Wd {envbindir}/coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage html
