--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,18 @@ sudo: false
 language: python
 cache: pip
 python:
-  - 3.7
+  - 3.8
 matrix:
   fast_finish: true
   include:
-    - python: 3.7
+    - python: 3.8
       env: REQ="https://github.com/django/django/archive/master.zip#egg=Django"
+    - python: 3.8
+      env: REQ="Django>=3.1,<3.2"
+    - python: 3.7
+      env: REQ="Django>=3.1,<3.2"
+    - python: 3.6
+      env: REQ="Django>=3.1,<3.2"
     - python: 3.7
       env: REQ="Django>=3.0,<3.1"
     - python: 3.6
@@ -31,7 +37,7 @@ matrix:
       env: REQ="Django>=1.11,<2.0"
     - python: 3.4
       env: REQ="Django>=1.11,<2.0"
-    - python: 3.7
+    - python: 3.8
       env: REQ="black flake8"
       install:
         - pip install black flake8
