Allow easily running tests with old Django versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,6 @@
+[tox]
+envlist = style,docs,tests
+
 [testenv]
 basepython = python3
 
@@ -33,4 +36,20 @@ changedir = {toxinidir}
 skip_install = true
 commands =
     python -Wd {envbindir}/coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage html
+    coverage report -m
+
+[testenv:tests-old]
+deps =
+    Django<2
+    Pillow
+    FeinCMS
+    django-admin-ordering
+    django-mptt
+    six
+    xlsxdocument
+    coverage
+changedir = {toxinidir}
+skip_install = true
+commands =
+    python -Wd {envbindir}/coverage run tests/manage.py test -v 2 {posargs:testapp}
+    coverage report -m
