--- a/tox.ini
+++ b/tox.ini
@@ -1,55 +1,32 @@
 [tox]
-envlist = style,docs,tests
+envlist =
+    py{36,37}-dj111
+    py{36,37,38,39}-dj{22,30,31,32}
+    py{38,39}-dj{main}
+    style
 
 [testenv]
-basepython = python3
+usedevelop = true
+extras = tests
+commands =
+    python -Wd {envbindir}/coverage run tests/manage.py test -v2 --keepdb {posargs:testapp}
+    coverage report -m
+deps =
+    dj111: Django>=1.11,<2.0
+    dj22: Django>=2.2,<3.0
+    dj30: Django>=3.0,<3.1
+    dj31: Django>=3.1,<3.2 
+    dj32: Django>=3.2a1,<4.0 
+    djmain: https://github.com/django/django/archive/main.tar.gz
 
 [testenv:style]
 deps =
-    flake8
     black
+    flake8
+    isort
 changedir = {toxinidir}
 commands =
-    black form_designer tests setup.py
+    black .
+    isort --profile=black --lines-after-import=2 --combine-as .
     flake8 .
 skip_install = true
-
-[testenv:docs]
-deps =
-    Sphinx
-changedir = docs
-commands = make html
-skip_install = true
-whitelist_externals = make
-
-[testenv:tests]
-deps =
-    Django
-    Pillow
-    FeinCMS
-    django-admin-ordering
-    django-mptt
-    six
-    xlsxdocument
-    coverage
-changedir = {toxinidir}
-skip_install = true
-commands =
-    python -Wd {envbindir}/coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage report -m
-
-[testenv:tests-old]
-deps =
-    Django<2
-    Pillow
-    FeinCMS
-    django-admin-ordering
-    django-mptt
-    six
-    xlsxdocument
-    coverage
-changedir = {toxinidir}
-skip_install = true
-commands =
-    python -Wd {envbindir}/coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage report -m
