--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{36,37,38,39}-dj{22,30,31,32}
-    py{38,39}-dj{main}
+    py{38,39}-dj{40,main}
     style
 
 [testenv]
@@ -13,8 +13,9 @@ commands =
 deps =
     dj22: Django>=2.2,<3.0
     dj30: Django>=3.0,<3.1
-    dj31: Django>=3.1,<3.2 
-    dj32: Django>=3.2a1,<4.0 
+    dj31: Django>=3.1,<3.2
+    dj32: Django>=3.2,<4.0
+    dj40: Django>=4.0a1,<4.1
     djmain: https://github.com/django/django/archive/main.tar.gz
 
 [testenv:style]
