--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifiers =
     Topic :: Software Development
 
 [options]
+python_requires = >=3.6
 packages = find:
 install_requires =
     django-admin-ordering
