Bye old versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,10 @@ classifiers =
     Topic :: Software Development
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.8
 packages = find:
 install_requires =
     django-admin-ordering
-    six
     xlsxdocument
 include_package_data = True
 zip_safe = False
@@ -40,18 +39,9 @@ tests =
     coverage
 
 [options.packages.find]
-exclude = tests
-
-[flake8]
-exclude = venv,build,docs,.tox,migrations,migrate
-ignore = E203,W503
-max-complexity = 10
-max-line-length = 88
-
-[isort]
-profile = black
-combine_as_imports = True
-lines_after_imports = 2
+exclude =
+    tests
+    tests.*
 
 [coverage:run]
 branch = True
