--- a/setup.cfg
+++ b/setup.cfg
@@ -19,29 +19,33 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
     Topic :: Software Development
 
 [options]
-python_requires = >=3.8
 packages = find:
 install_requires =
     django-admin-ordering
     xlsxdocument
+python_requires = >=3.8
 include_package_data = True
 zip_safe = False
-
-[options.extras_require]
-tests =
-    FeinCMS
-    django-mptt
-    django-recaptcha
-    coverage
 
 [options.packages.find]
 exclude =
     tests
     tests.*
+
+[options.extras_require]
+tests =
+    FeinCMS
+    coverage
+    django-mptt
+    django-recaptcha
 
 [coverage:run]
 branch = True
