--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{38,39,310}-dj{32,40,main}
+    py{38,39,310}-dj{32,40,41,main}
 
 [testenv]
 usedevelop = true
@@ -11,4 +11,5 @@ commands =
 deps =
     dj32: Django>=3.2,<4.0
     dj40: Django>=4.0,<4.1
+    dj41: Django>=4.1,<4.2
     djmain: https://github.com/django/django/archive/main.tar.gz
