--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = form_designer
+name = form-designer
 version = attr: form_designer.__version__
 description = Form Designer
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-url = https://github.com/feincms/form_designer/
+url = https://github.com/feincms/form-designer/
 author = Matthias Kestenholz
 author_email = mk@feinheit.ch
 license = BSD-3-Clause
