--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ path = "form_designer/__init__.py"
 include = ["/form_designer"]
 
 [tool.ruff]
-extend-select = [
+lint.extend-select = [
   # pyflakes, pycodestyle
   "F", "E", "W",
   # mmcabe
@@ -89,7 +89,7 @@ extend-select = [
   # unused noqa
   "RUF100",
 ]
-extend-ignore = [
+lint.extend-ignore = [
   # Allow zip() without strict=
   "B905",
   # No line length errors
@@ -99,14 +99,14 @@ fix = true
 show-fixes = true
 target-version = "py39"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 combine-as-imports = true
 lines-after-imports = 2
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 15
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "*/migrat*/*" = [
   # Allow using PascalCase model names in migrations
   "N806",
