--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{39,310}-dj{32,42}
     py{310,311}-dj{32,42,50,main}
     py{312}-dj{42,50,51,main}
+    py{313}-dj{51,main}
 
 [testenv]
 usedevelop = true
